# st2cpp

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  COPYING.ST2CPP_TYPES  CPackConfig.cmake  CPackSourceConfig.cmake  Doxyfile  INSTALL.md  README.md  build.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  docs.yml
examples/counter/: demo.st
examples/counter/counter2/: test.st
examples/inheritance/: test_inheritance.st
examples/processImage/: CMakeLists.txt  REAMDE.md
include/: version.hpp
include/ast/: AST.h
include/codegen/: CodeGenerator.h
include/lexer/: Lexer.h  Token.h
include/parser/: Parser.h
scripts/: release.sh
src/cli/: main.cpp
src/codegen/: CodeGenerator.cpp
src/lexer/: Lexer.cpp
src/parser/: Parser.cpp  ParserStmt.cpp
st2cpp_includes/: st2cpp_types.hpp
tests/: exec_tests  test_allocator.cpp  test_compilation.cpp  test_complex_program.cpp  test_generation.cpp  test_golden.cpp  test_lexer.cpp  test_main.cpp  test_parser.cpp  test_process_image.cpp  test_scope.cpp
tests/helpers/: TestHelper.cpp  TestHelper.h
tests/st_samples/: test_process_image.st  test_program.st
tests/test00/: counter.st
tests/test00/counter2/: counter2.st
tests/test01/: test_program.st
tests/test02/: test_array.st
tests/test04/: REAMDE.md  main.cpp  test_process_image.st
